@@ -85,6 +85,11 @@
         href="https://trac.cyberduck.io/ticket/9984">#9984</a>)
     </li>
     <li><span class="label label-success">Feature</span> Create and delete team drives (Google Drive)</li>
+    <li><span class="label label-warning">Bugfix</span> Cannot create new vault in team drive (Google Drive,
+        Cryptomator)
+        (<a
+            href="https://trac.cyberduck.io/ticket/10324">#10324</a>)
+    </li>
     <li><span class="label label-warning">Bugfix</span> Missing files in folders of vault (Google Drive, Cryptomator)
         (<a
             href="https://trac.cyberduck.io/ticket/10315">#10315</a>)
